--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
     <!-- Sticky Navigation Menu -->
     <nav>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#bio">Bio</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
