--- a/index.html
+++ b/index.html
@@ -274,20 +274,20 @@
         <p>Innovative Solutions for Web, App, and Custom Software Development</p>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="about">
+    <!-- Bio Section -->
+    <section id="bio" class="bio">
         <div>
             <center><img src="hero-image.jpg" alt="Andilezikhali" style="width: 500px; heihgt: 300px;"></center>
         </div>
-        <h2>About Me</h2>
-        <a href="./pages/about.html">About</a>
+        <h2>Bio</h2>
+        
         <p>Hi, I’m Andile Zikhali, a passionate full-stack developer with expertise in Laravel, React, MongoDB, .NET, and much more. I’ve worked with prestigious organizations such as SEDA, Empire Partner Foundation, and Ushaka Gaming Studio to deliver innovative solutions.</p>
         <p>From crafting robust web applications to designing intuitive user interfaces, I aim to bridge technology with creativity to solve real-world problems.</p>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <h2>Projects</h2>
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <h2>Experience</h2>
         <div class="project">
             <h3>MzansiVz</h3>
             <p>A Netflix-style streaming app with an intuitive design and personalized recommendations.</p>
@@ -303,9 +303,9 @@
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <h2>Services</h2>
+    <!-- Skills Section -->
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
         <ul>
             <li>Frontend Development: React, Angular</li>
             <li>Backend Development: Laravel, Node.js, .NET</li>
